# startpage

./: .gitignore  README.md  package.json
backend/: bootstrapDb.ts  bun.lockb  entertainment.json  index.js  index.ts  lib.ts  package-lock.json  package.json  production.json  syncDb.ts  tsconfig.json
backend-rust/: Cargo.toml  start
backend-rust/src/: error.rs  main.rs
backend-rust/src/services/: content.rs  mod.rs
backend/public/: index.html  manifest.json
backend/public/assets/: index-06356467.js  index-e1082571.css  index-fff61891.js
frontend/: .prettierrc  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  constants.tsx  global.css  index.tsx  types.ts
frontend/src/components/AppSelectContainer/: SelectionComponent.tsx  index.tsx
frontend/src/components/ApplicationLink/: index.tsx
frontend/src/components/Hoverable/: index.tsx
frontend/src/components/LinkContainer/: index.tsx  useLinkSelector.ts
frontend/src/components/PirateTheater/: index.tsx  useLoadContent.ts
frontend/src/providers/AppsProvider/: index.tsx
frontend/src/providers/ModeProvider/: index.tsx
frontend/src/styles/: common.ts  theme.ts  typography.ts
public/: index.html
scripts/: build.sh  bun-run  bun-server.service  kiosk.desktop  node_startup.desktop  startpage-init  startpage.service  startup.sh  wack-startup.sh
src/: App.tsx  global.css  index.tsx
src/components/: ApplicationLink.tsx
src/components/ApplicationLink/: constants.tsx  index.tsx
src/components/LinkContainer/: index.tsx
(+24 files in other folders)
