[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
listenfd = "1.0.1"
serde = { version = "1.0.156", features = ["derive", "std"] }
serde_json = "1.0.94"
